--- a/style.css
+++ b/style.css
@@ -57,11 +57,22 @@ i.fa-brands.fa-facebook.fa-2xl:hover {
 }
 
 i.fa-brands.fa-linkedin.fa-2xl:hover {
-  color: cornflowerblue
+  color: cornflowerblue;
 }
 
 i.fa-brands.fa-instagram.fa-2xl:hover {
   color: crimson;
+}
+i.fa-brands.fa-facebook.fa-2xl {
+  color: rgba(0, 0, 0, 0.876);
+}
+
+i.fa-brands.fa-linkedin.fa-2xl {
+  color: rgba(0, 0, 0, 0.876);
+}
+
+i.fa-brands.fa-instagram.fa-2xl {
+  color: rgba(0, 0, 0, 0.876);
 }
 
 #cursiva {
